lang/lc/tests/err_ret_type.expected.err
err_ret_type.sys: In function `foo':
err_ret_type.sys:1: error: incompatible type in return
