lang/lc/tests/err_ret_type.sys
bool function foo(int a)
{
	a
}
